stealth (2.11.01)

  * Construction of ps and pdf versions of the stealth manual was accidenally
    dropped in releases after 2.10.00. The ps and pdf versions are now
    available again.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 23 Jan 2013 10:20:20 +0100

stealth (2.11.00)   

  * The policy file may contain a USE DIFFPREFIX specification specifying the
    number of characters the diff command adds to lines produced by, e.g.,
    CHECK commands.

  * Path locations in the output of program are by default recognized by the
    first forward-slash found in output lines. CHECK commands now also support
    a column offset specifying the offset where path locations start. This
    allows commands to write slashes before path specifications.

  * Filenames may contain blanks. A path specification in output of programs
    begins at the first forward slash or at the line offset defines with a
    CHECK command, and continues until the last non-blank character on lines.

  * Stealth now returns 0 when options --version and/or --help are specified.

  * Some icmake specific changes: CLASSES defines the class dependencies; and
    icmconf specifies #define USE_ALL "a"

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 20 Jan 2013 16:40:53 +0100

stealth (2.10.01)   

  * The following #defines in INSTALL.im can be overruled by defining
    identically named environment variables: 
        CXX      defines the name of the compiler to use. By default `g++'
        CXXFLAGS the options passed to the compiler. 
                 By default `-Wall --std=c++0x -O2 -g'
        LDFLAGS  the options passed to the linker. By default no options are
                 passed to the linker.

  * Documentation files are now under ./documentation

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 17 Jul 2012 16:22:02 +0200

stealth (2.10.00)   

  * --reload pidfile reloads the configuration files

  * When specifying a directory with --skipfiles all entries below that